# kg-mng-agent

./: README.md  pyproject.toml
docs/: kgmng-subagent.md
src/kg_mng_agent/: __init__.py  agent.py  archive.py  cli.py  dedup.py  distill.py  extractors.py  graph.py  models.py  specs.py
tests/: test_agent.py  test_cli.py
