[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kg-mng-agent"
version = "0.1.0"
description = "Unified knowledge-management subagent inspired by BMAD, Graphify, OpenSpec, and SpecKit workflows."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "kg-mng-agent maintainers" }]
keywords = ["knowledge-management", "knowledge-graph", "spec-driven", "cli"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
pdf = ["pypdf>=4.0"]
docx = ["python-docx>=1.1"]
all = ["pypdf>=4.0", "python-docx>=1.1"]

[project.scripts]
kgmng = "kg_mng_agent.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/kg_mng_agent"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
